# wunderkafka

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  03-improvement.yml
.github/workflows/: pull-request.yml  release.yml
dev_docs/: index.md
dev_docs/pages/: API.md  advanced_usage.md  quickstart.md
docs/: 404.html  index.html
docs/pages/API/: index.html
docs/pages/advanced_API/: index.html
docs/pages/advanced_usage/: index.html
docs/pages/errata/: index.html
docs/pages/install/: index.html
docs/pages/quickstart/: index.html
docs/pages/rationale/: index.html
docs/search/: search_index.json
examples/: factory_consumer.py
examples/eos/: producer.py  producer_and_consumer.py  producer_only.py
pages/API/: index.html
pages/advanced_API/: index.html
pages/advanced_usage/: index.html
pages/errata/: index.html
pages/install/: index.html
pages/quickstart/: index.html
pages/rationale/: index.html
search/: search_index.json
tests/: conftest.py
tests/fixtures/fs_repo/: value.avsc
tests/integration/cloudera/: conftest.py  test_deserializing.py  test_schema_evolving.py  test_serializing_avromodel.py
tests/integration/confluent/: conftest.py
tests/integration/schemaless/: test_string_json_deserializing.py  test_string_jsonmodel_serializing.py
tests/smoke/: conftest.py  test_callbacks.py  test_config_krb.py  test_configs.py  test_factories.py  test_librdkafka_version.py
tests/unit/: test_fs_repo.py  test_generate.py  test_headers.py  test_serialize_shemaless_json.py  test_subscription.py  test_time.py  test_vendors.py
tests/unit/derive/: test_avro_base_model.py  test_base_classes.py  test_inheritance.py  test_nested.py  test_topic_naming.py
tests/unit/transactions/: conftest.py  test_transactions.py
wunderkafka/: __init__.py  callbacks.py  compat.py  eos.py  librdkafka.py  logger.py  message.py  protocols.py  structures.py  time.py  transactions.py
wunderkafka/callbacks/: producer.py
wunderkafka/callbacks/auth/: iam.py
wunderkafka/callbacks/consumer/: subscribe.py
wunderkafka/config/: __init__.py  fetch.py  generate.py  protocols.py  rdkafka.py  schema_registry.py
wunderkafka/config/krb/: compat.py  rdkafka.py  schema_registry.py
wunderkafka/consumers/: abc.py  bytes.py  constructor.py  subscription.py  types.py
wunderkafka/factories/: avro.py  json.py  mixed.py  schemaless.py
wunderkafka/producers/: abc.py  bytes.py  constructor.py  transaction.py
wunderkafka/schema_registry/: __init__.py  abc.py  transport.py
wunderkafka/schema_registry/clients/: cloudera.py  confluent.py
wunderkafka/serdes/: abc.py  headers.py  protocols.py  store.py  structures.py  vendors.py
wunderkafka/tests/: __init__.py  consumer.py  message.py  producer.py  schema_registry.py
(+48 files in other folders)
